tests/fail/nightly/invalid_custom_regex.stderr
error: regex parse error:
           ab(ab
             ^
       error: unclosed group

       In custom Regex format option
 --> tests/fail/nightly/invalid_custom_regex.rs:2:31
  |
2 |     sscanf::sscanf!("", "   {:/ab(ab/}   ", String).unwrap();
  |                               ^^^^^^^
